# xsef

./: .gitignore  CMakeLists.txt  README.md
include/: xcpu.hpp  xops.hpp  xsef.hpp  xt.hpp  xutils.hpp
src/: cpu.cc  tui.cc  xsef.cc
src/operations/: op0.cc  op1.cc  op10.cc  op11.cc  op12.cc  op13.cc  op14.cc  op15.cc  op2.cc  op3.cc  op4.cc  op5.cc  op6.cc  op7.cc  op8.cc  op9.cc
src/util/: lower.cc  readf.cc
